[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Etc/mechconcept.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/BrokenFontTitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Controllers/PauseController.gd" type="Script" id=3]
[ext_resource path="res://Scripts/ContinueButton.gd" type="Script" id=4]
[ext_resource path="res://Themes/Menus.tres" type="Theme" id=5]
[ext_resource path="res://Scenes/PauseSaveNode.tscn" type="PackedScene" id=6]

[node name="PauseRoot" type="CanvasLayer"]
layer = 2
script = ExtResource( 3 )

[node name="PauseSaveNode" parent="." instance=ExtResource( 6 )]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 317.0
margin_top = 30.0
margin_right = 667.0
margin_bottom = 530.0

[node name="BG" type="ColorRect" parent="Control/CenterContainer"]
margin_right = 350.0
margin_bottom = 500.0
rect_min_size = Vector2( 350, 500 )
color = Color( 1, 0, 0, 0.262745 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 23.0
margin_top = 1.0
margin_right = 327.0
margin_bottom = 499.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PauseText" type="Label" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 304.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "Paused"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 304.0
margin_bottom = 194.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="EmptyLabel" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 304.0
margin_bottom = 14.0

[node name="ContinueButton" type="Button" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 304.0
margin_bottom = 38.0
rect_min_size = Vector2( 100, 20 )
size_flags_horizontal = 5
text = "Resume"
script = ExtResource( 4 )

[node name="EmptyLabel2" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 304.0
margin_bottom = 56.0

[node name="SaveAndQuitButton" type="Button" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 304.0
margin_bottom = 80.0
rect_min_size = Vector2( 150, 20 )
size_flags_horizontal = 5
text = "Save and Quit"

[node name="EmptyLabel3" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 304.0
margin_bottom = 98.0

[node name="MasterVolumeParent" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 304.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer/MasterVolumeParent"]
margin_top = 1.0
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 14 )
text = "Master - 50%"

[node name="MasterVolumeSlider" type="HSlider" parent="Control/CenterContainer/VBoxContainer/VBoxContainer/MasterVolumeParent"]
margin_left = 104.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 16 )
max_value = 1.0
step = 0.01
value = 0.5

[node name="MusicVolumeParent" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 304.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer/MusicVolumeParent"]
margin_top = 1.0
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 14 )
text = "Music - 50%"

[node name="MusicVolumeSlider" type="HSlider" parent="Control/CenterContainer/VBoxContainer/VBoxContainer/MusicVolumeParent"]
margin_left = 104.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 16 )
max_value = 1.0
step = 0.01
value = 0.5

[node name="SoundVolumeParent" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 304.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer/SoundVolumeParent"]
margin_top = 1.0
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 14 )
text = "Sound - 50%"

[node name="SoundVolumeSlider" type="HSlider" parent="Control/CenterContainer/VBoxContainer/VBoxContainer/SoundVolumeParent"]
margin_left = 104.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 16 )
max_value = 1.0
step = 0.01
value = 0.5

[node name="CenterContainer2" type="CenterContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 304.0
margin_bottom = 498.0
size_flags_horizontal = 3

[node name="Characters" type="TextureRect" parent="Control/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 2.0
margin_right = 302.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="EmptyLabel4" type="Label" parent="."]
margin_left = 341.0
margin_top = 188.0
margin_right = 683.0
margin_bottom = 202.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="Control/CenterContainer/VBoxContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/VBoxContainer/ContinueButton" to="." method="_on_Button_pressed"]
[connection signal="focus_entered" from="Control/CenterContainer/VBoxContainer/VBoxContainer/SaveAndQuitButton" to="." method="_on_SaveAndQuitButton_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/VBoxContainer/SaveAndQuitButton" to="." method="_on_Button2_pressed"]
[connection signal="value_changed" from="Control/CenterContainer/VBoxContainer/VBoxContainer/MasterVolumeParent/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="Control/CenterContainer/VBoxContainer/VBoxContainer/MusicVolumeParent/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="Control/CenterContainer/VBoxContainer/VBoxContainer/SoundVolumeParent/SoundVolumeSlider" to="." method="_on_SoundVolumeSlider_value_changed"]
